--- a/templates/landing-template.html
+++ b/templates/landing-template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Paper - Landing Page</title>
+  <title><!-- Insert Title here --></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
@@ -20,14 +20,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">Paper</a>
+        <a class="navbar-brand" href="../index.html"><!-- Title --></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Jobs</a></li>
-          <li><a href="index.html">Blog</a></li>
-          <li><a href="index.html">About</a></li>
-          <li><a href="index.html">Login</a></li>
+          <li><a href="#"><!-- Navbar menu --></a></li>
+          <li><a href="#"><!-- Navbar menu --></a></li>
+          <li><a href="#"><!-- Navbar menu --></a></li>
+          <li><a href="#"><!-- Navbar menu --></a></li>
         </ul>
       </div>
     </div>
@@ -35,17 +35,16 @@
   <div class="container" style="margin-top: 100px;">
     <div class="row">
       <div class="col-lg-6 landing-text">
-        <h1><b>Paper</b></h1>
-        <h2><b>Simple, Elegant &amp; Flat Theme</b></h2>
-        <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> &amp; <a href="http://sass-lang.com/">Sass</a></span><br><br>
-        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
-        <p>You can also check out some <a href="index.html">Templates</a> built using Paper</p>
+        <h1><b><!-- Title --></b></h1>
+        <h2><b><!-- Caption --></b></h2>
+        <span class="sub-text"><!-- SubCaption --></span><br><br>
+        <p><!-- Content Description --></p>
         <br><br><br>
-        <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
       </div>
       <div class="col-lg-4 col-lg-offset-2">
         <div class="well">
-          <h4><b>Get Early Access</b></h4><hr>
+          <h4><b><!-- Form Title --></b></h4><hr>
+          <!-- Example Form -->
           <form role="form">
             <div class="form-group form-group-md">
               <label for="exampleInputName">Name</label>
@@ -61,6 +60,7 @@
             </div>
             <button type="submit" class="btn btn-success btn-block">Sign me up</button>
           </form>
+          <!-- end -->
         </div>
       </div>
     </div>
