--- a/templates/blog.html
+++ b/templates/blog.html
@@ -84,10 +84,9 @@
     </div>
   </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v2.0.0.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
   <script type="text/javascript" src="js/blog.js"></script>
-  <script type="text/javascript" src="../src/js/slidepanel.js"></script>
 </body>
 </html>
