Change url everywhere

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -6,8 +6,7 @@
   <title>Paper - Timeline</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/paper.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/demo.css">
   <link rel="stylesheet" href="css/timeline.css">
 </head>
@@ -219,7 +218,7 @@
   </div>
   
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v2.0.0.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
   <script type="text/javascript" src="js/jquery.autosize.min.js"></script>
