--- a/templates/blog.html
+++ b/templates/blog.html
@@ -6,8 +6,7 @@
   <title>Paper - Blog</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/paper.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/blog.css">
 </head>
 <body data-slide="push">
