--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,7 @@
   <title>Paper - Templates</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/paper.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/prism.css">
   <style type="text/css">
     .img-preview {
@@ -212,7 +211,7 @@
     </div>
   </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
   <script type="text/javascript" src="js/prism.js"></script>
   <script type="text/javascript">
     window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
