--- a/templates/landing.html
+++ b/templates/landing.html
@@ -6,8 +6,7 @@
   <title>Paper - Landing Page</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/paper.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
@@ -66,7 +65,7 @@
     </div>
   </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
   <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
   <script type="text/javascript" src="js/landing.js"></script>
 </body>
