--- a/templates/login-template.html
+++ b/templates/login-template.html
@@ -6,8 +6,7 @@
   <title><!-- Insert title here --></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/paper.css">
+  <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
@@ -59,6 +58,6 @@
     </div>
   </div>
   <script type="text/javascript" src="../dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="../dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../dist/js/paper.min.js"></script>
 </body>
 </html>
