--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,28 @@
   border: none;
   font-weight: bold;
 }
+
+pre[class*='language-'] > code[data-language] {
+  max-height: 100% !important;
+}
+
+.logo a {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #202020;
+  margin-top: 8px;
+  margin-left: 20px;
+  color: #fff;
+  font-weight: 800;
+  padding: 2px 14px;
+  font-size: 2.25rem;
+  font-weight: bolder;
+  text-decoration: none;
+}
+
+.logo a:hover {
+  text-decoration: none;
+  background-color: #303030;
+  color: #fff;
+}
