Changes to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ pre[class*='language-'] > code[data-language] {
 }
 
 .logo a {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   background-color: #202020;
@@ -35,4 +35,35 @@ pre[class*='language-'] > code[data-language] {
   text-decoration: none;
   background-color: #303030;
   color: #fff;
+}
+
+#panel-left {
+  background-color: #202020;
+  padding: 10px;
+  color: #fff;
+}
+
+#panel-left a {
+  color: #fff;
+  font-size: 1.5rem;
+  margin-left: 10px;
+}
+
+#panel-left i {
+  font-size: 1.75rem;
+}
+
+#panel-left ul{
+  margin-top: 50px;
+  list-style: none;
+}
+
+#panel-left li {
+  margin-top: 15px;
+}
+
+.footer {
+  background-color: #fafafa;
+  border-top: 1px solid #ddd;
+  padding: 30px;
 }
