Card component start

--- a/src/scss/paper.scss
+++ b/src/scss/paper.scss
@@ -1,4 +1,5 @@
 @import "components/_fonts";
 @import "_bootstrap";
 @import "components/_style";
-@import "components/_slidepanel"
+@import "components/_slidepanel";
+@import "components/_card";
