--- a/templates/css/timeline.css
+++ b/templates/css/timeline.css
@@ -99,7 +99,7 @@
   margin-bottom: 40px;
 }
 
-.cover-pic {
+/* .cover-pic {
   height: 125px;
   position: relative;
 }
@@ -132,7 +132,7 @@
   display: block;
   font-size: 1.35rem;
   color: #888;
-}
+} */
 
 .footer {
   padding: 10px;
