--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -93,7 +93,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3 col-md-3">
-        <div class="well">
+        <div class="card">
           <div class="cover-pic">
             <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="profile-pic">
           </div>
