Finished card component

--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -94,7 +94,17 @@
     <div class="row">
       <div class="col-lg-3 col-md-3">
         <div class="card">
-          <div class="cover-pic">
+          <div class="cover" data-fade="1500" data-duration="2500">
+            <ul class="cover-pics">
+              <li><img src="../assets/img/img-1.jpg"></li>
+              <li><img src="../assets/img/img-2.jpg"></li>
+              <li><img src="../assets/img/img-3.jpg"></li>
+              <li><img src="../assets/img/img-4.jpg"></li>
+              <li><img src="../assets/img/img-5.jpg"></li>
+              <li><img src="../assets/img/img-6.jpg"></li>
+              <li><img src="../assets/img/img-7.jpg"></li>
+              <li><img src="../assets/img/img-8.jpg"></li>
+            </ul>
             <img src="https://en.gravatar.com/userimage/23763355/e7bbf514106dc2fd9ddb4e8160a72e8c.png" alt="" class="profile-pic">
           </div>
           <div class="about">
