--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,19 +1,23 @@
 .card {
   background-color: white;
-  .cover-pic {
+  .cover {
     height: 125px;
     position: relative;
-  }
+    
+    .cover-pics {
+      display: none;
+    }
 
-  .cover-pic .profile-pic {
-    width: 35px;
-    border-radius: 10rem;
-    position: absolute;
-    bottom: 0;
-    left: 40%;
-    margin-bottom: -30px;
-    width: 63px !important;
-    border: 4px solid #fff;
+    .profile-pic {
+      width: 35px;
+      border-radius: 10rem;
+      position: absolute;
+      bottom: 0;
+      left: 40%;
+      margin-bottom: -30px;
+      width: 63px !important;
+      border: 4px solid #fff;
+    }
   }
 
   .about {
