--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,6 +1,6 @@
 .card {
   background-color: white;
-  border: 1px solid #ddd;
+  border: 1px solid $border-color;
   .cover {
     height: 150px;
     position: relative;
