Table row color fix

--- a/src/scss/bootstrap/_tables.scss
+++ b/src/scss/bootstrap/_tables.scss
@@ -155,11 +155,11 @@ table {
 // inheritance to nested tables.
 
 // Generate the contextual variants
-@include table-row-variant('active', $table-bg-active);
-@include table-row-variant('success', $state-success-bg);
-@include table-row-variant('info', $state-info-bg);
-@include table-row-variant('warning', $state-warning-bg);
-@include table-row-variant('danger', $state-danger-bg);
+@include table-row-variant('active', $table-bg-active, white);
+@include table-row-variant('success', $state-success-bg, white);
+@include table-row-variant('info', $state-info-bg, white);
+@include table-row-variant('warning', $state-warning-bg, white);
+@include table-row-variant('danger', $state-danger-bg, white);
 
 
 // Responsive tables
