Organize folders, files, paper v0.7.0

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,12 +33,12 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="../css.html">CSS</a></li>
-          <li><a href="../components.html">Components</a></li>
-          <li><a href="../extras.html">Extras</a></li>
+          <li><a href="../pages/css.html">CSS</a></li>
+          <li><a href="../pages/components.html">Components</a></li>
+          <li><a href="../pages/extras.html">Extras</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../getting-started.html">Getting Started</a></li>
+          <li><a href="../pages/getting-started.html">Getting Started</a></li>
           <li class="active"><a href="index.html">Templates</a></li>
         </ul>
       </div>
