Slider panel docs completed

--- a/src/scss/components/_slidepanel.scss
+++ b/src/scss/components/_slidepanel.scss
@@ -11,6 +11,7 @@ body[data-slide='push'] {
   height: 100%;
   position: fixed;
   display: none;
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 .wrapper, .mdm-left-panel {
