Move code templates into folder, change prism

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
       border-top: 1px solid #ddd;
       padding: 30px;
     }
+    pre {
+      max-height: 450px;
+    }
   </style>
 </head>
 <body>
@@ -130,7 +133,7 @@
           <h4 class="modal-title">Landing Template</h4>
         </div>
         <div class="modal-body">
-          <pre data-src="landing-template.html"></pre>
+          <pre data-src="code-templates/landing-template.html"></pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -146,7 +149,7 @@
           <h4 class="modal-title">Login Template</h4>
         </div>
         <div class="modal-body">
-          <pre data-src="login-template.html"></pre>
+          <pre data-src="code-templates/login-template.html"></pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -162,7 +165,7 @@
           <h4 class="modal-title">Timeline Template</h4>
         </div>
         <div class="modal-body">
-          <pre data-src="timeline-template.html"></pre>
+          <pre data-src="code-templates/timeline-template.html"></pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -178,7 +181,7 @@
           <h4 class="modal-title">Blog Template</h4>
         </div>
         <div class="modal-body">
-          <pre data-src="blog-template.html"></pre>
+          <pre data-src="code-templates/blog-template.html"></pre>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
