--- a/templates/landing.html
+++ b/templates/landing.html
@@ -23,10 +23,10 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Jobs</a></li>
-          <li><a href="index.html">Blog</a></li>
-          <li><a href="index.html">About</a></li>
-          <li><a href="index.html">Login</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Login</a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +37,7 @@
         <h1><b>Paper</b></h1>
         <h2><b>Simple, Elegant &amp; Flat Theme</b></h2>
         <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> &amp; <a href="http://sass-lang.com/">Sass</a></span><br><br>
-        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="http://github.com/sudharti">Github page.</a></p>
+        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../pages/getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="https://github.com/sudharti/paper">Github page.</a></p>
         <p>You can also check out some <a href="index.html">Templates</a> built using Paper</p>
         <br><br><br>
         <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
