Open in new tab links

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -36,11 +36,11 @@
       <div class="col-lg-6 landing-text">
         <h1><b>Paper</b></h1>
         <h2><b>Simple, Elegant &amp; Flat Theme</b></h2>
-        <span class="sub-text">Built with <a href="http://getbootstrap.com/">Bootstrap</a> &amp; <a href="http://sass-lang.com/">Sass</a></span><br><br>
-        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../pages/getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="https://github.com/sudharti/paper">Github page.</a></p>
+        <span class="sub-text">Built with <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> &amp; <a href="http://sass-lang.com/" target="_blank">Sass</a></span><br><br>
+        <p>Paper is a simple, flat Bootstrap theme. Please check out the source on Github. Check out the <a href="../pages/getting-started.html">Getting Started Guide.</a> or Check out the Readme on the <a href="https://github.com/sudharti/paper" target="_blank">Github page.</a></p>
         <p>You can also check out some <a href="index.html">Templates</a> built using Paper</p>
         <br><br><br>
-        <p>Image by <a href="http://unsplash.com">Unsplash</a></p>
+        <p>Image by <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
       </div>
       <div class="col-lg-4 col-lg-offset-2">
         <div class="well">
