--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="../index.html">Paper</a>
+        <a class="navbar-brand" href="/paper">Paper</a>
       </div>
     </div>
   </nav>
